# blender-vtk-importer-exporter

./: README.md  __init__.py  attributes.py  colorbar.py  exporter.py  importer.py  material_panel.py  mesh.py  nodes.py  preferences.py  pyproject.toml
.github/workflows/: build-and-test.yml
src/blender_vtk_importer_exporter/: __init__.py  attributes.py  colorbar.py  exporter.py  importer.py  material_panel.py  mesh.py  nodes.py  preferences.py
src/blender_vtk_importer_exporter/view3d_panel/: __init__.py  filters_panel.py  view3d_panel.py  view_panel.py
test_files/: test.py  test_import.py
tests/: test_imports.py
view3d_panel/: __init__.py  filters_panel.py  view3d_panel.py  view_panel.py
